--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
             <version>1.9</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <groupId>com.javadocmd</groupId>
+            <artifactId>simplelatlng</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
